fix whitespace

--- a/styles/multimedia.css
+++ b/styles/multimedia.css
@@ -54,6 +54,10 @@ p img , p svg {
   float: left;
   padding-block-start: 0;
 }
+picture {}
+blockquote picture {
+  margin: 0 4ch 1.6182em;
+}
 figure {
   background: red;
 }
@@ -65,7 +69,6 @@ figure img, picture img, figure picture {
   margin: 0;
   background: transparent;
 }
-
 figcaption::before {
   width: 1em;
   font-size: 1.618em;
